# klets

./: .gitignore  .prettierrc  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.changeset/: add-tier1-tier2-features.md  animated-banner-konami-chiptune.md  changesets-integration.md  fix-audio-binary-permissions.md  fix-person-detail-links.md  fix-transcript-playback.md  fix-transcript-tracking-lag.md  fix-update-cache-bypass.md  matrix-rain-konami.md  new-api-features.md  rust-audio-backend.md  update-check-feature.md
.github/workflows/: audio-build.yml  ci.yml  publish.yml
assets/: banner.txt
crates/klets-audio/: Cargo.toml
crates/klets-audio/src/: main.rs
demo/: episode-detail.tape  episodes.tape  home.tape  search.tape  transcript.tape
docs/: CODEKLETS_PODCAST.md
scripts/: sync-version.js
src/: app.tsx  cli.tsx
src/api/: client.ts  episodes.ts  moments.ts  persons.ts  quotes.ts  search-suggestions.ts  search.ts  seasons.ts  topics.ts  types.ts
src/audio/: jingle.ts
src/components/: empty-state.tsx  episode-card.tsx  error-boundary.tsx  error-display.tsx  footer.tsx  header.tsx  loading.tsx  matrix-rain.tsx  pagination.tsx  player-bar.tsx  screen-container.tsx  tag-pill.tsx  update-banner.tsx
src/hooks/: use-api.ts  use-color-wave.ts  use-history-tracker.ts  use-keybindings.ts  use-konami-code.ts  use-navigation.ts  use-player.ts  use-scrollable-list.ts  use-terminal-size.ts  use-update-check.ts
src/player/: decode.ts  detect.ts  index.ts  mpv-ipc.ts  rss.ts  (+1 more)
(+50 files in other folders)
